# hao_slambook2

./: .gitignore  README.md
ch1/: hw1.md
ch2/: CMakeLists.txt  a.out  helloSLAM.cpp  hw2.md  libHelloSLAM.cpp  libHelloSLAM.h  useHello.cpp
ch3/: hw3.md
ch3/ch3_homework/question/: CMakeLists.txt  task.cpp
ch3/examples/: CMakeLists.txt  plotTrajectory.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: eigenGeometry.cpp
ch4/: hw4.md  useSophus.cpp
ch4/example/: CMakeLists.txt  trajectoryError.cpp
ch5/: CMakeLists.txt  hw5.md
ch5/imageBasics/: imageBasics.cpp  undistortImage.cpp
ch5/rgbd/: CMakeLists.txt  joinMap.cpp
ch5/stereo/: stereoVision.cpp
ch6/: CMakeLists.txt  g2oCurveFitting.cpp  hw6.md
