option(USE_UBUNTU_20 "Set to ON if you are using Ubuntu 20.04" OFF)
find_package(Pangolin REQUIRED)
if(USE_UBUNTU_20)
    message("You are using Ubuntu 20.04, fmt::fmt will be linked")
    find_package(fmt REQUIRED)
    set(FMT_LIBRARIES fmt::fmt)
endif()
set(sophus_path "${PROJECT_SOURCE_DIR}/../thirdparty/Sophus")
message(STATUS "SOPHUS PATH IS:"${sophus_path})
include_directories(${Pangolin_INCLUDE_DIRS} ${sophus_path})

add_executable(trajectoryError trajectoryError.cpp)
target_link_libraries(trajectoryError ${Pangolin_LIBRARIES} ${FMT_LIBRARIES})
